<resources>
    <string name="app_name">AppMarketPlace</string>

    <string name="text_user">User</string>
    <string name="text_password">Password</string>
    <string name="text_name">Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_terms1">Accept privacy statement policy</string>
    <string name="text_terms2">Accept terms and conditions of use of the site</string>
    <string name="text_email">Email</string>
    <string name="text_provider">Provider</string>
    <string name="text_action_search">Search</string>
    <string name="text_action_home">Home</string>
    <string name="text_action_logout">Logout</string>
    <string name="text_fab">Add Element</string>
    <string name="text_product1">Camiseta</string>
    <string name="text_product2">Chaqueta</string>
    <string name="text_product3">Pantalón</string>
    <string name="text_price1">$10.000</string>
    <string name="text_price2">$250.000</string>
    <string name="text_price3">$150.000</string>
    <string name="text_category1">Sport</string>
    <string name="text_seller">Seller</string>
    <string name="text_category2">all occasions</string>
    <string name="text_category3">Formal</string>
    <string name="text_go">Go</string>
    <string name="text_pruduct">Product</string>
    <string name="text_category">Category</string>
    <string name="text_price">Price</string>
    <string name="text_developed">Developed by Ideapps</string>
    <string name="text_todo">Products</string>
    <string name="text_about">Buy</string>
    <string name="text_title">Title</string>
    <string name="text_search">Search</string>
    <string name="text_time">Category</string>
    <string name="fire_base">FireBase</string>
    <string name="fire_base_message">Full Firebase integration</string>
    <string name="go_markerplace">GoMarkerplace</string>
    <string name="prefs_file" translatable="false">com.example.appmarketplace.PREFERECE_FILE_KEY</string>
    <string name="text_All">All</string>
    <string name="text_description">Description</string>
    <string name="text_Comments">Comments</string>
    <string name="text_stars">Stars</string>
    <string name="text_total">Total </string>
    <string name="text_buy">Buy</string>
    <string name="text_mensaje1">###########</string>
    <string name="text_mensaje2">##########</string>
    <string name="menu_Order">Order</string>

    <string name="default_web_client_id2" translatable="false">1017434080370-slqfef8v4jf8i7ks6dd1gp1ibhsp3ac3.apps.googleusercontent.com</string>
    <string name="text_errorAuth">Failed to authenticate</string>
    <string name="text_ideapps">Ideapps 2021 ®</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <string name="hint_user">your_email@domain.com</string>
    <string name="hint_password">Your Password</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_last_name">Your Last Name</string>
    <string name="hint_phone_number">321 000 00 00</string>




</resources>