<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_margin="25dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textSize="25sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz " />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_last_name"
                android:layout_marginTop="0dp"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editLastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:layout_marginTop="1dp"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_margin="10dp"
                android:hint="@string/hint_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_password"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="25sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_phone_number"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="25sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editMobileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="phone"
                    android:digits="1234567890"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_terms1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_terms2"/>

            </LinearLayout>

            <!--    Buttons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:layout_width="150sp"
                    android:layout_height="40sp"
                    android:text="@string/btn_register"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="150sp"
                    android:layout_height="40sp"
                    android:text="@string/btn_login"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>