<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:id="@+id/loginLayout">

    //Imagen logo
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="25dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/market_login"/>

    </LinearLayout>

    //User y password
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_user"
                android:textSize="25sp"/>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_margin="10dp"
                android:hint="@string/hint_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_password"
                android:textSize="25sp"/>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogin"
                android:onClick="onLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"/>

            <Button
                android:id="@+id/btnRegister"
                android:onClick="onRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/btn_register"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/googleg_standard_color_18"
            android:gravity="center_horizontal|top"
            android:onClick="googleLogin"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

    //Footer
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ideapps"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>