<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="ToDoFragment">
    
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#eee"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/text_product1"/>

        <Button
            android:id="@+id/btn_detail_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_go"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#eee"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/text_product2"/>

        <Button
            android:id="@+id/btn_detail_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_go"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#eee"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/text_product3"/>

        <Button
            android:id="@+id/btn_detail_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_go"/>
    </LinearLayout>
-->
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/text_search" />

        <LinearLayout
            android:id="@+id/layoutSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@+id/svSearch">

            <LinearLayout
                android:id="@+id/layoutSpinner1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutSpinner"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_category"
                    android:textSize="12sp"
                    app:layout_constraintTop_toTopOf="@+id/layoutSpinner1"/>

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/textCategory" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/layoutSpinner2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutSpinner"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSeller"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_seller"
                    android:textSize="12sp"
                    app:layout_constraintTop_toTopOf="@+id/layoutSpinner2"/>

                <Spinner
                    android:id="@+id/seller_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintTop_toTopOf="@+id/textSeller"
                    tools:layout_editor_absoluteX="0dp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="5dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTodolist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"/>

    </ScrollView>

</LinearLayout>